sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:6: error: not found: value test
    test=false
    ^AlgCocktailSort2:10: error: not found: value test
        test=true
        ^AlgCocktailSort2:17: error: not found: value test
        test=true
        ^AlgCocktailSort2:22: error: not found: value test
  while(test==true)
        ^