sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut=0
  var fin=getNombreValeurs()-2
  do{
    test=false
    for(i <- debut to fin){
      if(plusPetit(i,i+1)==false){
        echange(i,i+1)
        test=true
        fin-=1
      }
    }
    for(j <- debut to fin){
      if(plusPetit(fin-j,fin-1-j)==true){
        echange(fin-j,fin-1-j)
        test=true
        debut+=1
      }
    }
  }
  while(test==true)
}